--- a/index.html
+++ b/index.html
@@ -182,10 +182,11 @@
     <p><strong>Usuario:</strong> <span id="userName">-</span></p>
     <p><strong>Premium:</strong> <span id="userPremium">No</span></p>
     <p><strong>Caduca:</strong> <span id="userExpire">-</span></p>
+    <button onclick="logout()" style="margin-top: 10px; padding: 10px; background: #ff4c4c; border: none; border-radius: 8px; color: white; font-weight: 600; cursor: pointer;">Cerrar sesión</button>
   </div>
 
   <div id="gameGrid" style="display:none">
-   <div class="game">
+    <div class="game">
       <a href="Slope-Source-code-main/index.html">
         <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope">
         <div class="game-title">Slope</div>
@@ -275,15 +276,31 @@
     });
 
     function register() {
-      const email = document.getElementById('regEmail').value;
-      const pass = document.getElementById('regPass').value;
-      const repeat = document.getElementById('regRepeat').value;
+      const email = document.getElementById('regEmail').value.trim();
+      const pass = document.getElementById('regPass').value.trim();
+      const repeat = document.getElementById('regRepeat').value.trim();
 
-      if (!email || !pass || !repeat) return alert('Completa todos los campos.');
-      if (pass !== repeat) return alert('Las contraseñas no coinciden.');
+      if (!email || !pass || !repeat) {
+        alert('Completa todos los campos.');
+        return;
+      }
+      if (pass !== repeat) {
+        alert('Las contraseñas no coinciden.');
+        return;
+      }
 
-      const users = JSON.parse(localStorage.getItem('users') || '{}');
-      if (users[email]) return alert('El usuario ya existe.');
+      let users = {};
+      try {
+        users = JSON.parse(localStorage.getItem('users')) || {};
+      } catch (e) {
+        console.error('Error al leer usuarios:', e);
+        users = {};
+      }
+
+      if (users[email]) {
+        alert('El usuario ya existe.');
+        return;
+      }
 
       users[email] = {
         password: pass,
@@ -291,15 +308,29 @@
         expire: '31/12/2025',
         playedGames: []
       };
-      localStorage.setItem('users', JSON.stringify(users));
-      alert('Registro exitoso. Ahora puedes iniciar sesión.');
-      toggleForms();
+
+      try {
+        localStorage.setItem('users', JSON.stringify(users));
+        alert('Registro exitoso. Ahora puedes iniciar sesión.');
+        toggleForms();
+      } catch (e) {
+        console.error('Error al guardar el usuario:', e);
+        alert('No se pudo guardar el usuario.');
+      }
     }
 
     function login() {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-      const users = JSON.parse(localStorage.getItem('users') || '{}');
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
+      let users = {};
+
+      try {
+        users = JSON.parse(localStorage.getItem('users')) || {};
+      } catch (e) {
+        console.error('Error al leer usuarios:', e);
+        alert('Error interno al intentar iniciar sesión.');
+        return;
+      }
 
       if (!users[email] || users[email].password !== password) {
         alert('Credenciales incorrectas.');
@@ -316,6 +347,12 @@
       document.getElementById('userName').textContent = email.split('@')[0];
       document.getElementById('userPremium').textContent = user.premium ? 'Sí' : 'No';
       document.getElementById('userExpire').textContent = user.expire || '-';
+    }
+
+    function logout() {
+      localStorage.removeItem('loggedIn');
+      localStorage.removeItem('username');
+      location.reload();
     }
 
     function playGame(url) {
