--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CELEX - Juegos</title>
-  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
@@ -36,7 +36,8 @@
       margin-top: 30px;
     }
 
-    #loginContainer, #registerContainer {
+    #loginContainer,
+    #registerContainer {
       width: 400px;
       margin: 100px auto;
       background: rgba(0, 0, 0, 0.85);
@@ -75,8 +76,10 @@
       background: #00bfa5;
     }
 
-    p, a {
+    p,
+    a {
       font-weight: 600;
+      cursor: pointer;
     }
 
     #gameGrid {
@@ -145,7 +148,7 @@
       border-radius: 15px;
       display: none;
       color: white;
-      width: 250px;
+      width: 260px;
       box-shadow: 0 0 10px #00ffe1;
       z-index: 50;
       font-weight: 600;
@@ -162,34 +165,34 @@
 
   <div id="loginContainer">
     <h2>Iniciar sesión</h2>
-    <input type="email" id="email" placeholder="Correo electrónico">
-    <input type="password" id="password" placeholder="Contraseña">
+    <input type="email" id="email" placeholder="Correo electrónico" autocomplete="username" />
+    <input type="password" id="password" placeholder="Contraseña" autocomplete="current-password" />
     <button onclick="login()">Entrar</button>
-    <p>¿No tienes cuenta? <a href="#" onclick="toggleForms()">Regístrate</a></p>
+    <p>¿No tienes cuenta? <a onclick="toggleForms()">Regístrate</a></p>
   </div>
 
   <div id="registerContainer">
     <h2>Registro</h2>
-    <input type="text" id="regUsername" placeholder="Nombre de usuario">
-    <input type="email" id="regEmail" placeholder="Correo electrónico">
-    <input type="password" id="regPass" placeholder="Contraseña">
-    <input type="password" id="regRepeat" placeholder="Repite la contraseña">
+    <input type="text" id="regUser" placeholder="Usuario" autocomplete="username" />
+    <input type="email" id="regEmail" placeholder="Correo electrónico" autocomplete="email" />
+    <input type="password" id="regPass" placeholder="Contraseña" autocomplete="new-password" />
+    <input type="password" id="regRepeat" placeholder="Repite la contraseña" autocomplete="new-password" />
     <button onclick="register()">Registrarse</button>
-    <p>¿Ya tienes cuenta? <a href="#" onclick="toggleForms()">Iniciar sesión</a></p>
+    <p>¿Ya tienes cuenta? <a onclick="toggleForms()">Iniciar sesión</a></p>
   </div>
 
-  <div id="userPanel">U</div>
+  <div id="userPanel" title="Abrir menú de usuario">U</div>
   <div id="userDropdown">
     <p><strong>Usuario:</strong> <span id="userName">-</span></p>
     <p><strong>Correo:</strong> <span id="userEmail">-</span></p>
     <p><strong>Premium:</strong> <span id="userPremium">No</span></p>
     <p><strong>Caduca:</strong> <span id="userExpire">-</span></p>
-    <p><strong>Registro:</strong> <span id="userRegistered">-</span></p>
+    <p><strong>Registrado el:</strong> <span id="userRegistered">-</span></p>
     <button onclick="logout()" style="margin-top: 10px; padding: 10px; background: #ff4c4c; border: none; border-radius: 8px; color: white; font-weight: 600; cursor: pointer;">Cerrar sesión</button>
   </div>
 
   <div id="gameGrid" style="display:none">
-    <div class="game">
+<div class="game">
       <a href="Slope-Source-code-main/index.html">
         <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope">
         <div class="game-title">Slope</div>
@@ -269,56 +272,91 @@
     function toggleForms() {
       const login = document.getElementById('loginContainer');
       const register = document.getElementById('registerContainer');
-      login.style.display = login.style.display === 'none' ? 'block' : 'none';
-      register.style.display = register.style.display === 'none' ? 'block' : 'none';
+      if (login.style.display === 'none') {
+        login.style.display = 'block';
+        register.style.display = 'none';
+      } else {
+        login.style.display = 'none';
+        register.style.display = 'block';
+      }
     }
 
-    function getTodayDate() {
-      const today = new Date();
-      return today.toLocaleDateString('es-ES');
-    }
+    document.getElementById('userPanel').addEventListener('click', () => {
+      const dropdown = document.getElementById('userDropdown');
+      dropdown.style.display = dropdown.style.display === 'none' || dropdown.style.display === '' ? 'block' : 'none';
+    });
 
     function register() {
+      const user = document.getElementById('regUser').value.trim();
       const email = document.getElementById('regEmail').value.trim();
       const pass = document.getElementById('regPass').value.trim();
       const repeat = document.getElementById('regRepeat').value.trim();
-      const username = document.getElementById('regUsername').value.trim();
 
-      if (!email || !pass || !repeat || !username) {
+      if (!user || !email || !pass || !repeat) {
         alert('Completa todos los campos.');
         return;
       }
-
       if (pass !== repeat) {
         alert('Las contraseñas no coinciden.');
         return;
       }
 
-      let users = JSON.parse(localStorage.getItem('users') || '{}');
-
-      if (users[email]) {
-        alert('El usuario ya existe.');
-        return;
+      let users = {};
+      try {
+        users = JSON.parse(localStorage.getItem('users')) || {};
+      } catch (e) {
+        console.error('Error al leer usuarios:', e);
+        users = {};
       }
 
+      // Verificar si el usuario o el correo ya existen
+      for (const key in users) {
+        if (key === email || users[key].username === user) {
+          alert('El correo o usuario ya están registrados.');
+          return;
+        }
+      }
+
+      // Fecha de registro en formato dd/mm/yyyy
+      const now = new Date();
+      const registeredDate = now.toLocaleDateString('es-ES');
+
       users[email] = {
-        username: username,
+        username: user,
         password: pass,
         premium: true,
         expire: '31/12/2025',
-        registered: getTodayDate(),
+        registered: registeredDate,
         playedGames: []
       };
 
-      localStorage.setItem('users', JSON.stringify(users));
-      alert('Registro exitoso. Ahora puedes iniciar sesión.');
-      toggleForms();
+      try {
+        localStorage.setItem('users', JSON.stringify(users));
+        alert('Registro exitoso. Ahora puedes iniciar sesión.');
+        toggleForms();
+        // Limpiar inputs
+        document.getElementById('regUser').value = '';
+        document.getElementById('regEmail').value = '';
+        document.getElementById('regPass').value = '';
+        document.getElementById('regRepeat').value = '';
+      } catch (e) {
+        console.error('Error al guardar el usuario:', e);
+        alert('No se pudo guardar el usuario.');
+      }
     }
 
     function login() {
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value.trim();
-      let users = JSON.parse(localStorage.getItem('users') || '{}');
+      let users = {};
+
+      try {
+        users = JSON.parse(localStorage.getItem('users')) || {};
+      } catch (e) {
+        console.error('Error al leer usuarios:', e);
+        alert('Error interno al intentar iniciar sesión.');
+        return;
+      }
 
       if (!users[email] || users[email].password !== password) {
         alert('Credenciales incorrectas.');
@@ -332,12 +370,15 @@
       document.getElementById('registerContainer').style.display = 'none';
       document.getElementById('gameGrid').style.display = 'grid';
       document.getElementById('userPanel').style.display = 'flex';
-
       document.getElementById('userName').textContent = user.username;
       document.getElementById('userEmail').textContent = email;
       document.getElementById('userPremium').textContent = user.premium ? 'Sí' : 'No';
       document.getElementById('userExpire').textContent = user.expire || '-';
       document.getElementById('userRegistered').textContent = user.registered || '-';
+
+      // Limpiar login inputs
+      document.getElementById('email').value = '';
+      document.getElementById('password').value = '';
     }
 
     function logout() {
@@ -356,15 +397,11 @@
           users[email].playedGames.push(url);
           localStorage.setItem('users', JSON.stringify(users));
         }
+        console.log(`Juegos jugados por ${email}:`, users[email].playedGames);
       }
 
       window.open(url, '_blank');
     }
-
-    document.getElementById('userPanel').addEventListener('click', () => {
-      const dropdown = document.getElementById('userDropdown');
-      dropdown.style.display = dropdown.style.display === 'none' ? 'block' : 'none';
-    });
 
     window.onload = () => {
       if (localStorage.getItem('loggedIn') === 'true') {
@@ -372,16 +409,20 @@
         const users = JSON.parse(localStorage.getItem('users') || '{}');
         const user = users[email];
 
-        document.getElementById('loginContainer').style.display = 'none';
-        document.getElementById('registerContainer').style.display = 'none';
-        document.getElementById('gameGrid').style.display = 'grid';
-        document.getElementById('userPanel').style.display = 'flex';
-
-        document.getElementById('userName').textContent = user.username;
-        document.getElementById('userEmail').textContent = email;
-        document.getElementById('userPremium').textContent = user.premium ? 'Sí' : 'No';
-        document.getElementById('userExpire').textContent = user.expire || '-';
-        document.getElementById('userRegistered').textContent = user.registered || '-';
+        if (user) {
+          document.getElementById('loginContainer').style.display = 'none';
+          document.getElementById('registerContainer').style.display = 'none';
+          document.getElementById('gameGrid').style.display = 'grid';
+          document.getElementById('userPanel').style.display = 'flex';
+          document.getElementById('userName').textContent = user.username;
+          document.getElementById('userEmail').textContent = email;
+          document.getElementById('userPremium').textContent = user.premium ? 'Sí' : 'No';
+          document.getElementById('userExpire').textContent = user.expire || '-';
+          document.getElementById('userRegistered').textContent = user.registered || '-';
+        } else {
+          // Si no existe usuario (ej. borrado localStorage), desloguear
+          logout();
+        }
       }
     };
   </script>
